istio/Security/1-mtls.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
spec:
  host: "*.local" # Habilita o uso do mTLS para todos os services
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
