istio/Security/2-jwt-policy.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "RequestAuthentication"
metadata:
  name: request-policy
  namespace: on-premise
spec:
  selector:
    matchLabels:
      app: api-graphql
  jwtRules:
  - issuer: "https://dev-2m1d80cr.auth0.com/"
    jwksUri: "https://dev-2m1d80cr.auth0.com/.well-known/jwks.json"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: auth-policy
  namespace: on-premise
spec:
  selector:
    matchLabels:
      app: api-graphql
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
